--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     name=<input type="text" value="name">
+     ffname=<input type="text" value="firstname">
     <input type="submit" value="Submit">
 </body>
 </html>
